kubernetes/shelfmark-comics/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: shelfmark-comics
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: shelfmark-comics
  template:
    metadata:
      labels:
        app: shelfmark-comics
    spec:
      containers:
      - name: shelfmark-comics
        image: ghcr.io/calibrain/shelfmark:v1.4.0@sha256:4ef757349c3c7a7d90ba95b1e2a46ce4dd460a4776efbcf2aa1b1c476e7d5de5
        ports:
        - containerPort: 8084
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /books
          name: komga-staging
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: shelfmark-comics-config
      - name: komga-staging
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/books/komga-staging
      - name: downloads
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads
