kubernetes/shelfmark-comics/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: shelfmark-comics

spec:
  ports:
  - port: 8084
    targetPort: 8084
    protocol: TCP
    name: http
  selector:
    app: shelfmark-comics
