kubernetes/shelfmark-comics/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shelfmark-comics
  annotations:
    ak-type: oidc
    ak-oidc-callback: /api/auth/oidc/callback
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Shelfmark (Comics)
    gethomepage.dev/description: Comic Search
    gethomepage.dev/group: Media Automation
    gethomepage.dev/icon: mdi-book-search
    gethomepage.dev/pod-selector: app=shelfmark-comics

spec:
  tls:
  - hosts:
    - shelfmark-comics.k.oneill.net
    secretName: shelfmark-comics-tls
  rules:
  - host: shelfmark-comics.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shelfmark-comics
            port:
              number: 8084
